Updated method parameters
