# src/controllers/CalculatorController.ts
@@ -1,7 +1,8 @@
 "use strict";
 
 import { Calculator } from "../classes/Calculator";
-import { Controller, Get, Query, Route, Tags } from "tsoa";
+import { Controller, Get, Query, Response, Route, Tags } from "tsoa";
+import { ICalculationResult, IMessage } from "../types";
 
 const calculator = new Calculator();
 
@@ -16,11 +17,18 @@ export class CalculatorController extends Controller {
 
     /**
     * Controller method for calculating sum.
-    * @param numbers Comma separated list of numbers.
-    * @returns {"result": number, "isPrime": boolean} JSON-object consisting of calculation results.
+    * @param numbers Array of comma separated number that we will be calculating.
+    * @returns {"result": number, "prime": boolean} JSON-object indicating if input was prime.
     * @returns {"message": string} JSON-object indicating calculation error.
     */
     @Get("/sum")
+    @Response<ICalculationResult>("200", "ok", {
+        result: 1, 
+        prime: true
+    })
+    @Response<IMessage>("400", "bad request", {
+        message: "Invalid numbers provided.", 
+    })
     public async sum(
         @Query() numbers: string
     ): Promise<{ result: number, isPrime: boolean } | { message: string }> {
@@ -28,7 +36,7 @@ export class CalculatorController extends Controller {
         const sum = calculator.sum(numberArray);
         if (Number.isNaN(sum)) {
             this.setStatus(400);
-            return { message: "Invalid numbers provided!" };
+            return { message: "Invalid numbers provided." };
         }
         else {
             this.setStatus(200);
@@ -38,20 +46,27 @@ export class CalculatorController extends Controller {
 
     /**
     * Controller method for checking if number is prime.
-    * @param number Number that we will be checking
-    * @returns {"result": boolean} JSON-object indicating if input was prime.
+    * @param number Number that we will be checking.
+    * @returns {"result": number, "prime": boolean} JSON-object indicating if input was prime.
     * @returns {"message": string} JSON-object indicating calculation error.
     */
     @Get("/prime")
+    @Response<ICalculationResult>("200", "ok", {
+        result: 2,
+        prime: true
+    })
+    @Response<IMessage>("400", "bad request", {
+        message: "Invalid numbers provided.", 
+    })
     public async isPrime(
         @Query() number: number
-    ): Promise<{ result: boolean } | { message: string }> {
+    ): Promise<{ result: number, prime: boolean } | { message: string }> {
         if (Number.isNaN(Number(number))) {
             this.setStatus(400);
             return { message: "Invalid number provided!" };
         } else {
             this.setStatus(200);
-            return { result: calculator.isPrime(number) };
+            return { result: number, prime: calculator.isPrime(number) };
         }
     }
 }
