# src/types.ts
@@ -1,0 +1,8 @@
+export interface IMessage {
+    message: string;
+}
+
+export interface ICalculationResult {
+    result: number,
+    prime: boolean
+}
